# starkcash

./: .gitignore  Cargo.toml  DEPLOYMENT_INFO.md  README.md  ZK_ROADMAP.md  package-lock.json  package.json
circuits/: merkleTree.circom  withdraw.circom
contracts/: FEATURES.md  Scarb.toml
contracts/src/: ghost_pool.cairo  groth16_verifier.cairo  groth16_verifier_external.cairo  lib.cairo  merkle_tree.cairo  poseidon.cairo  poseidon_bn254.cairo  verifier_constants.cairo
contracts/tests/: test_ghost_pool.cairo
research/: ghostprotocol-modular-architecture.md  ghostprotocol-zk-features.md  tornado-cash-complete-features.md  tornado-cash-features.md
src/: lib.rs  main.rs
src/module/: mod.rs
src/module/cryptography/: commitment.rs  mimc.rs  mod.rs  nullifier.rs  poseidon.rs  proof.rs  utils.rs
src/module/merkle_tree/: constants.rs  mod.rs  proof.rs  storage.rs  tree.rs
starkcash_groth16/: Scarb.toml
starkcash_groth16/src/: groth16_verifier_constants.cairo
tests/integration/cryptography/: commitment_tests.rs  mimc_tests.rs  mod.rs  nullifier_tests.rs  proof_tests.rs  utils_tests.rs
tests/integration/merkle_tree/: mod.rs  tree_tests.rs
zkp/: Cargo.toml
zkp/src/: lib.rs  merkle_tree.rs  prover.rs
zkp/tests/: integration_test.rs
