[package]
name = "starkcash"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "starkcash"
path = "src/main.rs"

[lib]
name = "starkcash"
path = "src/lib.rs"

[dependencies]
# Core dependencies
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Testing dependencies
tokio = { version = "1.0", features = ["full"] }

[[test]]
name = "cryptography_integration"
path = "tests/integration/cryptography/mod.rs"
