[package]
name = "starkcash-zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
starkcash = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
num-bigint = "0.4"
num-traits = "0.2"
